--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
         <title>Weather Dashboard</title>
         <meta name="description" content="Get a 5-day weather forecast for multiple cities.">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!-- Bootstrap CDN -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+        <!-- CSS -->
         <link rel="stylesheet" href="">
         <!-- jQuery CDN -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -13,6 +16,39 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     </head>
     <body>
+        <header>
+            <h1>Weather Dashboard</h1>
+        </header>
+        <div class="container-fluid">
+            <div class="row">
+                <aside class="col-md-3 pl-2">
+                    <div class="card">
+                        <div class="card-body">
+                            <h6>Search for City:</h6>
+                            <form class="form-inline">
+                                <div class="form-group">
+                                    <label for=""></label>
+                                    <input type="text" id="city-search" class="form-control" placeholder="New York City" aria-describedby="helpId">
+                                </div>
+                                <button id="search" class="btn btn-primary" type="submit"><i class="fa fa-search" aria-hidden="true"></i></button>
+                            </form>
+                        </div>
+                    </div>
+                </aside>
+                <section></section>    
+            </div>            
+            
+
+        </div>
+
+
+
+
+
+
+
+
+
         <!-- Bootstrap JS CDN -->
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
         <!-- Moments.js CDN -->
